# Gym-Website

./: .gitignore  Dockerfile  Makefile  README.md  app.db  cert.pem  dbmodel.sql  format.sh  key.pem  populate.py  pyproject.toml  requirements.txt
.github/workflows/: black.yml  docker.yaml
app/: __init__.py  bookings.py  config.py  forms.py  login.py  management.py  models.py  payments.py  populate.py  util.py  views.py
app/static/: account_info.js  activities.js  alert.js  base.css  checkout.js  create_account.js  home.js  login_page.js  manage_activities_facilities.js  manage_add_activity.js  manage_staff.js  management_graphs.js  previousBooking.js  receipt.css  receipt.js  site.webmanifest  theme.css  theme.js  time.js
app/templates/: account_info.html  activities.html  base.html  booking_macro.html  bookings.html  cancel.html  cancel_membership.html  card_payments.html  change_password.html  checkout.html  create_account.html  facilities.html  forgot_password.html  home.html  login_page.html  manage_activities_facilities.html  manage_add_account.html  manage_add_activity.html  manage_add_facility.html  manage_discount.html  manage_prices.html  manage_staff.html  management.html  management_graphs.html  pricing.html  user_booking.html  view_user_bookings.html
branding/: README.md
migrations/versions/: 26259a8d94c1_upgrade.py
